--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 
 $white: #fff;
 
-$color-primary: #1d393f;
+$color-primary: rgb(11, 11, 138);
 $color-secondary: #421b2a;
 $color-accent: #eeea72;
 $color-shade: #eee;
